<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".IncomingChatActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/from_username_calling_text"
        android:id="@+id/fromUsernameCallingText"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:weightSum="2"
        style="@style/DarkContainer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@null"
            android:text="@string/accept_button"
            android:id="@+id/acceptButton"
            android:src="@drawable/ic_check_white_48dp"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/decline_button"
            android:id="@+id/declineButton"
            android:src="@drawable/ic_close_white_48dp"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
