<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignInActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/welcomeText"
        android:layout_marginBottom="42dp"
        android:layout_above="@+id/usernamePrompt"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:id="@+id/goButton"
        android:layout_alignTop="@+id/usernameInput"
        android:layout_toRightOf="@+id/usernameInput"
        android:layout_toEndOf="@+id/usernameInput" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameInput"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/usernamePrompt"
        android:layout_alignStart="@+id/usernamePrompt"
        android:layout_alignRight="@+id/usernamePrompt"
        android:layout_alignEnd="@+id/usernamePrompt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_prompt"
        android:id="@+id/usernamePrompt"
        android:layout_above="@+id/usernameInput"
        android:layout_alignLeft="@+id/welcomeText"
        android:layout_alignStart="@+id/welcomeText" />

</RelativeLayout>
