<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartChatActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/start_chat_text"
        android:id="@+id/welcomeText"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/to_username_prompt"
        android:id="@+id/toUsernamePrompt"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toUsernameInput"
        android:autoText="false"
        android:layout_below="@+id/toUsernamePrompt"
        android:layout_alignLeft="@+id/toUsernamePrompt"
        android:layout_alignStart="@+id/toUsernamePrompt"
        android:layout_alignRight="@+id/toUsernamePrompt"
        android:layout_alignEnd="@+id/toUsernamePrompt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voice_chat_button"
        android:id="@+id/voiceChatButton"
        android:textStyle="bold"
        android:layout_below="@+id/videoChatButton"
        android:layout_alignLeft="@+id/videoChatButton"
        android:layout_alignStart="@+id/videoChatButton"
        android:layout_marginTop="36dp"
        android:layout_alignRight="@+id/videoChatButton"
        android:layout_alignEnd="@+id/videoChatButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_chat_button"
        android:id="@+id/videoChatButton"
        android:textStyle="bold"
        android:layout_below="@+id/toUsernameInput"
        android:layout_alignLeft="@+id/toUsernameInput"
        android:layout_alignStart="@+id/toUsernameInput"
        android:layout_marginTop="27dp"
        android:layout_alignRight="@+id/toUsernameInput"
        android:layout_alignEnd="@+id/toUsernameInput" />

</RelativeLayout>
